@@ -18,7 +18,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 --> 
 <ui>
-    <popup name="TrayIconPopup">
+    <popup name="StatusIconPopup">
         <menuitem action="ScanClipboard"/>
         <menuitem action="Quit"/>
     </popup>
